--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,17 +2,39 @@
   text-align: center;
 }
 
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
 .App-header {
-  background-color: lightblue;
-  height: 60px;
-  padding: 10px;
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1em;
+  font-size: 1.5em;
 }
 
-.App-blurb {
-  font-size: 0.5em;
+.App-intro {
+  font-size: large;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+button {
+  background-color: lightblue;
+  padding: 5px 7px;
+  border-radius: 3px;
+  border: 1px solid lightblue;
+}
+
+button:hover {
+  background-color: lightgray;
+  border: 1px solid gray;
 }
